# MySmile

./: README.md
MySmile/: .env.example  .vade-report  index.html  login.html  package-lock.json  package.json  resources.html  screening.html  testimonials.html  tsconfig.app.json  tsconfig.json  tsconfig.node.json
MySmile/src/: App.tsx  admin.js  style.css
MySmile/src/components/: AdminLoginPage.tsx  BlogPage.tsx  BlogPostPreviewCard.tsx  Hero.tsx  HomePage.tsx  Navbar.tsx  NearbyClinics.tsx  ProtectedRoute.tsx  ScreeningPage.tsx  SecurityPrivacyPage.tsx  TestimonialsPage.tsx
MySmile/src/components/ui/: button.tsx  input-group.tsx  spinner.tsx
MySmile/src/lib/: supabase.ts
MySmile/src/pages/: AdminDashboard.tsx  AdminLoginPage.tsx  BlogPage.tsx  HomePage.tsx  ScreeningPage.tsx  SecurityPrivacyPage.tsx  TermsPage.tsx  TestimonialsPage.tsx
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/components/: __init__.py  img_transform.py  loader.py  pred_utils.py
backend/model/: README.md
docs/: Supabase.md
frontend/MySmile/: index.html
