[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for MySmile"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx==0.28.1",
    "huggingface-hub>=1.8.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
]
[tool.uv]
package = false
