[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for MySmile"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "huggingface-hub>=1.8.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "requests>=2.33.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn[standard]>=0.41.0",
]
[tool.uv]
package = false